# eDO_core_msgs

./: CMakeLists.txt  LICENSE  package.xml
msg/: AppState.msg  AppStateArray.msg  BrakesCheckAck.msg  CalibCnt.msg  CollisionAlgoToState.msg  CollisionFromAlgoToState.msg  CollisionThreshold.msg  Frame.msg  JointControl.msg  JointMonitoring.msg  JointState.msg  JointValue.msg  MovementCommand.msg  Payload.msg  Pen.msg  Point.msg
srv/: CalibCounter.srv  JointsNumber.srv  SoftwareVersion.srv  SystemCommand.srv  SystemCommandSrv.srv  ToolConfiguration.srv
