<?xml version="1.0"?>
<package>
  <name>edo_core_msgs</name>
  <version>0.1.0</version>
  <description>The edo_core_msgs package</description>

  <maintainer email="community@eDO.Cloud">eDOTeam</maintainer>

  <license>BSD</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <url type="website">http://eDO.Cloud</url>
  

  <!-- Author tags are optional, multiple are allowed, one per tag -->
  <!-- Authors do not have to be maintainers, but could be -->
  <!-- Example: -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <author email="@.com">Russo Ludovico Orlando</author>
  <author email="@.com">Primatesta Stefano</author>
  <author email="@.com">Gonizzi Pietro</author>
  <author email="@.com">Bosia Alberto</author>
  <author email="@.com">Lazzero Ivan</author>
  <author email="@.com">Palmieri Stefano</author>
  <author email="@.com"></author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
